# votable-parser

./: CMakeLists.txt  Catalog.cc  Catalog.h  CatalogTester.cc  README.md  TestVOTableController.cc  VOTableCarrier.cc  VOTableCarrier.h  VOTableController.cc  VOTableController.h  VOTableInterface.h  VOTableParser.cc  VOTableParser.h  VOTableTester.cc
images/: M17_SWex_simbad_2arcmin.xml  simple.xml
tests/: TestVOTableController.cc  TestVOTableParser.cc
